Fix Hero image, spacing, media query on small devices.

--- a/components/home/hero/hero.module.scss
+++ b/components/home/hero/hero.module.scss
@@ -1,8 +1,8 @@
 .hero {
   margin-bottom: 9.6rem;
   padding: 9rem 2.5rem 9rem 2.5rem;
-  @media (max-width: 768px) {
-    padding-top: 2rem;
+  @media (max-width: 980px) {
+    padding-top: 1.5rem;
     margin-bottom: 4.8rem;
   }
 }
@@ -68,20 +68,25 @@
 }
 
 .heroGrid {
+  gap: 2rem;
   display: flex;
-  flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 
-  @media (max-width: 768px) {
+  @media (max-width: 980px) {
     flex-direction: column-reverse;
     align-items: start;
     flex-wrap: wrap;
 
     .profile {
-      margin-top: 6rem;
-      margin-left: 2rem;
+      height: 150px;
+      width: 150px;
+      margin-right: 0;
+      margin-bottom: -30px;
+      margin-top: 3rem;
+      margin-left: 1.5rem;
     }
   }
 }
